--- a/public/css/index.css
+++ b/public/css/index.css
@@ -48,12 +48,14 @@ textarea {
   left: 0;*/
   width: 100%;
   font-size: 100%;  
+  padding: 7px;
 }
 
 .final {
   color: #000;
   padding-right: 3px; 
 }
+
 .interim {
   color: gray;
 }
@@ -124,9 +126,23 @@ div.empty-container {
 
 div.chat-container {
   width: 49%;
-  height: 80%;
+  height: 70%;
   float: left;
+}
+
+div.chat-full-height {
+  height: 100%;
+}
+
+div.chat-area {
   overflow: auto;
+  height: 100%;
+}
+
+div.guide {
+  text-align: center;
+  font-weight: bold;
+  padding: 8px 0;
 }
 
 @media (max-width: 768px) {
@@ -135,6 +151,7 @@ div.chat-container {
   }
   div.chat-container {
     width: 100%;
+    height: 70%;
   }
   body {
     padding: 0;
