--- a/public/css/index.css
+++ b/public/css/index.css
@@ -42,10 +42,6 @@ textarea {
 .input-container {
   border: 1px solid #ccc;
   outline: none;  
-  /*position: absolute;
-  padding-left: 10px;
-  right: 0;
-  left: 0;*/
   width: 100%;
   font-size: 100%;  
   padding: 7px;
@@ -66,15 +62,6 @@ div.mic-container {
 
 #btn_start {
   padding: 5px;
-  /*
-  border: 0;
-  background-color:transparent;
-  padding: 0;
-  position: absolute;
-  right: 5px;
-  bottom: 5px;
-  position: absolute;
-  */
 }
 
 #img_start {
@@ -120,13 +107,19 @@ div.messageUser {
 
 div.empty-container {
   width: 49%;
-  height: 80%;
+  height: 70%;
   float: left;  
 }
 
 div.chat-container {
   width: 49%;
   height: 70%;
+  float: left;
+}
+
+div.interactive-container {
+  width: 98%;
+  margin: 0 auto;
   float: left;
 }
 
@@ -143,6 +136,7 @@ div.guide {
   text-align: center;
   font-weight: bold;
   padding: 8px 0;
+  height: 40px;
 }
 
 @media (max-width: 768px) {
